--- a/index..html
+++ b/index..html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória</title>
     <link rel="stylesheet" href="_css/memorygame.css">
+    <script type="text/javascript" src="/_javascript/memorygame.js"></script>
     
 </head>
 
@@ -28,7 +29,7 @@
 </div>
 
 <div class="congratulationbox" id="cb">
-  <img class="congratsicon" src="/_imagens/congratulationsicon.png">
+  <img class="congratsicon" src="congratulationsicon.png">
   <h1>Parabéns!!!</h1>
   <h2>Você conseguiu</h2>
   <h3 id="pontuaçao"></h3>
