--- a/index..html
+++ b/index..html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória</title>
-    <link rel="stylesheet" href="_css/memorygame.css">
-    <script type="text/javascript" src="/_javascript/memorygame.js"></script>
+    <link rel="stylesheet" href="https://kaiotrajano.github.io/Memory-game/style.css">
+    <script src="https://kaiotrajano.github.io/Memory-game/scripts.js"></script>
     
 </head>
 
@@ -44,5 +44,5 @@
 </section>
 
 
-<script type="text/javascript" src="/_javascript/memorygame.js"></script>
+<script src="https://kaiotrajano.github.io/Memory-game/scripts.js"></script>
 </html>
